Progress on outline.

--- a/outline_first_paper.tex
+++ b/outline_first_paper.tex
@@ -133,6 +133,8 @@ in empirically-determined estimates of process model parameters. A Bayesian stat
 \item \textbf{What are the strengths and weaknesses of loss emulation?} \\ 
 In this high-dimensional output setting, some sort of dimensionality reduction is required. The alternatives to loss emulation are dynamic emulation (i.e. emulating the flow map) or 
 emulating the parameters in a basis representation of the output. 
+\item \textbf{What is the effect of range-constraint in loss emulation?} 
+\item \textbf{What are effective strategies for running emulator-assisted MCMC?}
 \end{enumerate}
 
 \begin{enumerate}
